assets/css/styles.css
/* ... */
#logo {
    float: left;
    margin: 0.8rem 0 0 3rem;
    font-size: 3.5rem;
}

#menu {
    float: right;
    margin-right: 3rem;
    font-size: 1.5rem;
    font-family: 'Abhaya Libre', serif;
    letter-spacing: 0.156em;

}

#menu li {
    list-style-type: none;
    float: left;
    padding: 0.5rem;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    color: white;
}

#active-page {
    border-bottom: 2px solid #080300;
}

/* Hero and Circle Image */

#hero-container {
    width: 100%;
    height: 34.375rem;
    position: relative;

}

#hero-image {
    width: 100%;
    height: 80%;
    background: url(../images/hero-image.jpeg) no-repeat center;
    background-size: cover;
}

#circle-container {
    height: 15.625rem;
    width: 15.625rem;
    position: absolute;
    left: 50%;
    top: 98%;
    transform: translate(-50%, -98%);
    background-color: white;
    border-radius: 50%;
    padding: 1rem;
}

#circle-image {
    height: 100%;
    background: url(../images/circle-image.JPG) no-repeat center;
    border-radius: 50%;

}

/* About Us */

#about-us-container {
    width: 100%;
}

#about-us-container p {
    text-align: justify;
    font-style: italic;
    margin: 1.25rem 25rem 1.25rem 25rem;
}

#about-us-container a {
    text-decoration: underline;
    color: inherit;
    font-weight: bold;
}

#about-us-container a:hover {
    color: #f0c808;
}

#about-us-bg {
    height: 27.5rem;
    width: 100%;
    object-fit: cover;
    clear: both;
    padding-top: 1rem;
    padding-bottom: 0;
    display: block;
}

/* Our Reasons for Travel */

#reason-container {
    height: auto;
    background-color: whitesmoke;
}

#reason-container p {
    font-style: italic;
    text-align: justify;
}

#reason-container span {
    font-weight: bold;
}

#reason-container h3 {
    background-color: #cf8432;
    color: #f7f3f3;
    padding: 1rem;
    font-size: 1.5rem;
}

#left-reason {
    width: 20%;
    height: auto;
    margin-left: 15rem;
    float: left;
    padding: 0.4rem;

}

#right-reason {
    width: 20%;
    height: auto;
    float: right;
    margin-right: 15rem;
    padding: 0.4rem;
}

#center-reason {
    width: 21%;
    height: auto;
    margin: auto;
    padding: 0.4rem;

}

/* Last Visited Maps*/

#last-visited-container {
    background: whitesmoke;
    padding-bottom: 3.5rem;
}

#maps-container iframe {
    width: 100%;
    height: 16rem;
    border: none;
    display: block;
}


/* Last Visited Video*/

#video-container {
    position: relative;
    width: 60rem;
    height: 33.75rem;
    margin: 2rem 0 0 10rem;
}

#video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

#video-paragraph {
    float: right;
    width: 20%;
    margin: 6rem 6.25rem 0 0;
    padding: 2rem;
}

#video-paragraph p {
    font-style: italic;
    font-weight: bold;
    letter-spacing: 0.156rem;
}

/* Footer */

#content-container {
    min-height: 100vh;
    position: relative;
    padding-bottom: 6.25rem;
}

#footer {
    height: 6.25rem;
    width: 100%;
    background-color: #f0c808;
    position: absolute;
    bottom: 0;
}

#footer h4 {
    margin: 0
}

#social-footer {
    text-align: center;
}

#social-footer li {
    display: inline;
}

#social-footer i {
    font-size: 300%;
    padding: 0 7.5rem 0 4.5rem;
    color: #100108;
}

/* Island Inspirations */

#island-inspirations {
    height: auto;
    background-color: #100108;
    padding-bottom: 3rem;
    color: white;
    overflow: hidden;
}

#island-inspirations h2 {
    padding: 2rem;
    color: white;
}

#video-maldives {
    float: left;
    position: relative;
    width: 50rem;
    height: 28.125rem;
    margin-left: 3.125rem;
}

#video-maldives iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

#video-thailand {
    float: right;
    position: relative;
    width: 50rem;
    height: 28.125rem;
    margin-right: 3.125rem;
}

#video-thailand iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

#island-inspirations figcaption {
    position: absolute;
    top: 29rem;
    text-transform: uppercase;
    font-size: 1.5rem;
}

/* Scenery and Food Inspirations */

#scenery-inspirations {
    clear: both;

}

.image-container {
    clear: both;
    column-count: 3;
    column-gap: 5px;
}

.image-container img {
    width: 100%;
}

#food-inspirations {
    background-color: #080300;

}

#food-inspirations h2 {
    color: white;
}

/* Contact Us */

#form-container {
    height: 100vh;
    background: url(../images/contact-us-bg.jpeg) no-repeat center;
    background-size: cover;
}

#form-details {
    margin: 10rem auto;
    width: 30rem;
    height: auto;
    background-color: RGBA(0, 0, 0, 0.5);
    padding: 2rem;
    border-radius: 15px;
}

#form-details label {
    font-family: 'Roboto', sans-serif;
    text-align: left;
    color: white;
    letter-spacing: 0.156rem;
    font-size: 1.2rem;
}

.form-input {
    color: inherit;
    width: 100%;
    height: 1.875rem;
    margin: 0.3125rem 0 1.25rem 0;
    border: 2px solid black;
    border-radius: 10px;
    font-size: 1.2rem;
}

#form-details input:focus,
textarea:focus {
    outline-style: none;
    border-color: #cf8432;
    box-shadow: 0 0 10px #cf8432;
}

#form-details textarea {
    width: 100%;
    height: 6.25rem;
    margin: 1.25rem 0;
    border-radius: 10px;
    font-size: 1.2rem;
}

#form-details input[type=submit] {
    border-radius: 10px;
    font-size: 1.2rem;
    padding: 0.5rem;
    background-color: #080300;
    color: white;
}

#form-details input[type=submit]:hover {
    background-color: white;
    color: black;
}

/* Thank You */

#thank-you {
    margin: 15rem auto;
    width: 50%;
    text-align: center;
    font-size: 3rem;
    font-weight: bold;
    font-style: italic;
    letter-spacing: 0.15rem;
}
/* ... */

